# tianchi_crawler

./: .gitegnore  README.md  demo.py  pyproject.toml
tianchi_crawler/: __init__.py  browser_manager.py  converter.py  crawler.py  service.py  stealth.py
tianchi_crawler_service/: browser_manager.py  config.py  converter.py  crawler.py  demo.py  service.py
