[project]
name = "tianchi-crawler"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright==1.58.0",
    "tf-playwright-stealth==1.2.0",
    "pydantic==2.11.7",
    "mcp[cli]>=1.26.0",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "html2text==2025.4.15",
    "lxml>=6.0.2",
]
[project.scripts]
tianchi-crawler = "tianchi_crawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tianchi_crawler_service"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
